--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "67da1540",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "62218066",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "06d6ca39-dc5b-4e26-a3a3-459a9318b4a9",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "2419e4aa",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "71375753",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a43f630c",
    "metadata": {},
    "outputs": [
@@ -461,10 +461,38 @@
        " 'Ficus platyphylla',\n",
        " 'Ficus polita',\n",
        " 'Ficus sur',\n",
-       " 'Ficus sycomorus ssp. gnaphalocarpa']"
+       " 'Ficus sycomorus ssp. gnaphalocarpa',\n",
+       " 'Ficus thonningii',\n",
+       " 'Ficus trichopoda',\n",
+       " 'Ficus umbellata',\n",
+       " 'Ficus vallis-choudae',\n",
+       " 'Ficus vogelii',\n",
+       " 'Flacourtia indica',\n",
+       " 'Flueggea virosa',\n",
+       " 'Garcinia livingstonei',\n",
+       " 'Garcinia ovalifolia',\n",
+       " 'Gardenia aqualla',\n",
+       " 'Gardenia erubescens',\n",
+       " 'Gardenia sokotensis',\n",
+       " 'Gardenia ternifolia',\n",
+       " 'Gliricidia sepium',\n",
+       " 'Gmelina arborea',\n",
+       " 'Grewia barteri',\n",
+       " 'Grewia bicolor',\n",
+       " 'Grewia cissoides',\n",
+       " 'Grewia flavescens',\n",
+       " 'Grewia lasiodiscus',\n",
+       " 'Grewia tenax',\n",
+       " 'Grewia venusta',\n",
+       " 'Grewia villosa',\n",
+       " 'Guibourtia copallifera',\n",
+       " 'Guiera senegalensis',\n",
+       " 'Gymnema sylvestre',\n",
+       " 'Gyrocarpus americanus ssp. pinnatilobus',\n",
+       " 'Haematostaphis barteri']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "2317deb2",
    "metadata": {},
    "outputs": [
@@ -649,28 +677,56 @@
       "Ficus platyphylla done\n",
       "Ficus polita done\n",
       "Ficus sur done\n",
-      "Ficus sycomorus ssp. gnaphalocarpa done\n"
+      "Ficus sycomorus ssp. gnaphalocarpa done\n",
+      "Ficus thonningii done\n",
+      "Ficus trichopoda done\n",
+      "Ficus umbellata done\n",
+      "Ficus vallis-choudae done\n",
+      "Ficus vogelii done\n",
+      "Flacourtia indica done\n",
+      "Flueggea virosa done\n",
+      "Garcinia livingstonei done\n",
+      "Garcinia ovalifolia done\n",
+      "Gardenia aqualla done\n",
+      "Gardenia erubescens done\n",
+      "Gardenia sokotensis done\n",
+      "Gardenia ternifolia done\n",
+      "Gliricidia sepium done\n",
+      "Gmelina arborea done\n",
+      "Grewia barteri done\n",
+      "Grewia bicolor done\n",
+      "Grewia cissoides done\n",
+      "Grewia flavescens done\n",
+      "Grewia lasiodiscus done\n",
+      "Grewia tenax done\n",
+      "Grewia venusta done\n",
+      "Grewia villosa done\n",
+      "Guibourtia copallifera done\n",
+      "Guiera senegalensis done\n",
+      "Gymnema sylvestre done\n",
+      "Gyrocarpus americanus ssp. pinnatilobus done\n",
+      "Haematostaphis barteri done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 52%|█████▏    | 187/361 [00:49<00:46,  3.77it/s]\n"
+      " 59%|█████▉    | 213/361 [00:45<00:31,  4.70it/s] \n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Haematostaphis+barteri+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Lannea+humilis+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mplantnet\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m plantnet_species_google[plantnet] \u001b[39m=\u001b[39m search_results\n",
-      "Cell \u001b[0;32mIn[11], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[7], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mplantnet\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m plantnet_species_google[plantnet] \u001b[39m=\u001b[39m search_results\n",
+      "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Haematostaphis+barteri+attributes&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Lannea+humilis+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
@@ -706,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "5e85ab2e",
    "metadata": {},
    "outputs": [],
