--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -489,7 +489,60 @@
        " 'Guiera senegalensis',\n",
        " 'Gymnema sylvestre',\n",
        " 'Gyrocarpus americanus ssp. pinnatilobus',\n",
-       " 'Haematostaphis barteri']"
+       " 'Haematostaphis barteri',\n",
+       " 'Hannoa undulata',\n",
+       " 'Harungana madagascariensis',\n",
+       " 'Hexalobus monopetalus',\n",
+       " 'Holarrhena floribunda',\n",
+       " 'Hoslundia opposita',\n",
+       " 'Hymenocardia acida',\n",
+       " 'Hymenocardia heudelotii',\n",
+       " 'Hyphaene thebaica',\n",
+       " 'Ipomoea carnea ssp. fistulosa',\n",
+       " 'Isoberlinia doka',\n",
+       " 'Isoberlinia tomentosa',\n",
+       " 'Ixora brachypoda',\n",
+       " 'Jasminum dichotomum',\n",
+       " 'Jasminum obtusifolium',\n",
+       " 'Jatropha curcas',\n",
+       " 'Jatropha gossypiifolia',\n",
+       " 'Keetia cornelia',\n",
+       " 'Keetia venosa',\n",
+       " 'Khaya senegalensis',\n",
+       " 'Kigelia africana',\n",
+       " 'Landolphia heudelotii',\n",
+       " 'Lannea acida',\n",
+       " 'Lannea barteri',\n",
+       " 'Lannea egregia',\n",
+       " 'Lannea fruticosa',\n",
+       " 'Lannea humilis',\n",
+       " 'Lannea microcarpa',\n",
+       " 'Lannea schimperi',\n",
+       " 'Lannea velutina',\n",
+       " 'Lantana camara',\n",
+       " 'Lawsonia inermis',\n",
+       " 'Lecaniodiscus cupanioides',\n",
+       " 'Leptadenia hastata',\n",
+       " 'Leptadenia pyrotechnica',\n",
+       " 'Leucaena leucocephala',\n",
+       " 'Lippia chevalieri',\n",
+       " 'Loeseneriella africana',\n",
+       " 'Lonchocarpus cyanescens',\n",
+       " 'Lonchocarpus laxiflorus',\n",
+       " 'Lonchocarpus sericeus',\n",
+       " 'Lophira lanceolata',\n",
+       " 'Macrosphyra longistyla',\n",
+       " 'Maerua angolensis',\n",
+       " 'Maerua crassifolia',\n",
+       " 'Maerua oblongifolia',\n",
+       " 'Malacantha alnifolia',\n",
+       " 'Mangifera indica',\n",
+       " 'Manilkara multinervis',\n",
+       " 'Maranthes polyandra',\n",
+       " 'Margaritaria discoidea',\n",
+       " 'Markhamia tomentosa',\n",
+       " 'Maytenus senegalensis',\n",
+       " 'Mimosa pigra']"
       ]
      },
      "execution_count": 6,
@@ -705,19 +758,72 @@
       "Guiera senegalensis done\n",
       "Gymnema sylvestre done\n",
       "Gyrocarpus americanus ssp. pinnatilobus done\n",
-      "Haematostaphis barteri done\n"
+      "Haematostaphis barteri done\n",
+      "Hannoa undulata done\n",
+      "Harungana madagascariensis done\n",
+      "Hexalobus monopetalus done\n",
+      "Holarrhena floribunda done\n",
+      "Hoslundia opposita done\n",
+      "Hymenocardia acida done\n",
+      "Hymenocardia heudelotii done\n",
+      "Hyphaene thebaica done\n",
+      "Ipomoea carnea ssp. fistulosa done\n",
+      "Isoberlinia doka done\n",
+      "Isoberlinia tomentosa done\n",
+      "Ixora brachypoda done\n",
+      "Jasminum dichotomum done\n",
+      "Jasminum obtusifolium done\n",
+      "Jatropha curcas done\n",
+      "Jatropha gossypiifolia done\n",
+      "Keetia cornelia done\n",
+      "Keetia venosa done\n",
+      "Khaya senegalensis done\n",
+      "Kigelia africana done\n",
+      "Landolphia heudelotii done\n",
+      "Lannea acida done\n",
+      "Lannea barteri done\n",
+      "Lannea egregia done\n",
+      "Lannea fruticosa done\n",
+      "Lannea humilis done\n",
+      "Lannea microcarpa done\n",
+      "Lannea schimperi done\n",
+      "Lannea velutina done\n",
+      "Lantana camara done\n",
+      "Lawsonia inermis done\n",
+      "Lecaniodiscus cupanioides done\n",
+      "Leptadenia hastata done\n",
+      "Leptadenia pyrotechnica done\n",
+      "Leucaena leucocephala done\n",
+      "Lippia chevalieri done\n",
+      "Loeseneriella africana done\n",
+      "Lonchocarpus cyanescens done\n",
+      "Lonchocarpus laxiflorus done\n",
+      "Lonchocarpus sericeus done\n",
+      "Lophira lanceolata done\n",
+      "Macrosphyra longistyla done\n",
+      "Maerua angolensis done\n",
+      "Maerua crassifolia done\n",
+      "Maerua oblongifolia done\n",
+      "Malacantha alnifolia done\n",
+      "Mangifera indica done\n",
+      "Manilkara multinervis done\n",
+      "Maranthes polyandra done\n",
+      "Margaritaria discoidea done\n",
+      "Markhamia tomentosa done\n",
+      "Maytenus senegalensis done\n",
+      "Mimosa pigra done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 59%|█████▉    | 213/361 [00:45<00:31,  4.70it/s] \n"
+      " 74%|███████▍  | 267/361 [00:45<00:15,  5.90it/s] \n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Lannea+humilis+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Phyllanthus+reticulatus+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -726,7 +832,7 @@
       "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Lannea+humilis+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Phyllanthus+reticulatus+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
