--- a/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_single_species_testing.ipynb
+++ b/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_single_species_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "  'pinnate, 6-8 leaflets']}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:04<00:00,  1.59s/it]\n"
+      "100%|██████████| 3/3 [00:03<00:00,  1.29s/it]\n"
      ]
     }
    ],
@@ -291,107 +291,45 @@
     "    # directory already exists\n",
     "    pass\n",
     "\n",
-    "question = \"Can you select the correct value from the Python trait list, fill in 'NOT SPECIFIED' if you cannot find anything.\"\n",
-    "\n",
     "for trait, trait_options in tqdm(caribbean_traits_dict.items()):\n",
     "\n",
-    "    # Prompt\n",
-    "    trait_with_options = F\"- {trait}: {trait_options}\"\n",
-    "    prompt = create_prompt(text_paras, trait_with_options, question)\n",
+    "    ### PROMPT ###\n",
+    "    \n",
+    "    # Question\n",
+    "    question = F\"\"\"Can you select the correct value(s) for the '{trait}' trait from the text?\n",
+    "    Only return the correct value(s) or select 'Something else:' and fill in your finding(s).\"\"\"\n",
+    "    \n",
+    "    # List Options\n",
+    "    # options = \"\\n\".join([F\"\\t- {s}\" for s in trait_options])\n",
+    "    # options += \"\\n\\t- Nothing mentioned\\n\\t- Something else: \"\n",
+    "    options = trait_options + [\"Nothing mentiond in the next\", \"Someting else\"]\n",
     "\n",
-    "    result = query_ChatGPT(prompt)\n",
-    "    # # TESTING\n",
-    "    # result = {'Test':\n",
-    "    #           [\n",
-    "    #             \"String1\", \n",
-    "    #             \"String2\",\n",
-    "    #           ]}\n",
+    "    # Text\n",
+    "    text = text_paras\n",
     "\n",
-    "    file_name = combine_words_with_capital(trait)\n",
-    "    with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
-    "        json.dump(result, fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-6tdV9wDSpIgeW3B4weyV8fC7O08Rw at 0x7fd9507da070> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"content\": \"Leaf composition: ['simple', 'elliptical']\",\n",
-       "        \"role\": \"assistant\"\n",
-       "      }\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1678717903,\n",
-       "  \"id\": \"chatcmpl-6tdV9wDSpIgeW3B4weyV8fC7O08Rw\",\n",
-       "  \"model\": \"gpt-3.5-turbo-0301\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 13,\n",
-       "    \"prompt_tokens\": 960,\n",
-       "    \"total_tokens\": 973\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Leaf composition: ['simple', 'elliptical']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(result[\"choices\"][0][\"message\"][\"content\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    Text:\n",
-      "    Spikes of small greenish flowers are followed by fruits, which are similar in appearance to an apple, are green or greenish-yellow when ripe. The manchineel is a handsome round-crowned tree that grows up to 12 metres (40 feet) in height with a 60-cm- (2-foot-) thick trunk. It has long-stalked, lustrous, leathery, elliptic yellow-green leaves. The sweet-scented fruits are borne singly or in pairs and range in colour from yellow to reddish. The fruit contains a hard stone that encloses six to nine seeds. A flowering, evergreen, and a round-crowned tree that can reach up to 50 feet in height , the Manchineel has a reddish-grey bark and a trunk that can be around two feet in diameter. It has long-stalked, shiny, and elliptical leaves that are yellow-green in colour and about 10 centimetres in length. The leaves are simple, alternately arranged, and have serrated edges. The fruit of the Manchineel resemble apples and are green or greenish-yellow when ripe. The hard stone inside the fruit contains six to nine seeds. Hippomane mancinella grows up to 15 metres (49 feet) tall. It has reddish-grayish bark, small greenish-yellow flowers, and shiny green leaves. The leaves are simple, alternate, very finely serrated or toothed, and 5–10 centimetres (2–4 inches) long.[7] The tree is up to 15m (50 feet) tall, with lush leaves. ”1 Manchineel is usually a tall shrub, but it can reach heights of up to 50 feet. The leaves are simple, alternate, very finely serrated or toothed, and 2–4 inches long. Each leaf has a small gland where the leaf joins the stem. The bark is reddish-to-grayish brown and deeply furrowed or cracked looking. Flowers are yellow green and inconspicuous, but the spikes or leafless stems that the flowers emerge from are visible. The fruit is a bright-green pome that looks distinctly like an apple; however, it is only 1–2 inches in diameter and turns greenish yellow when ripe. General InformationMancenillier is a glabrous, deciduous or evergreen tree with spreading branches and a rounded crown[331TitleFlora of Guatemala Publication AuthorStandley P.C. & J. A. Steyermark Websitehttp://www.archive.org/ Properties Medicinal Rating Other Uses Rating HabitSemi-deciduous Tree Height12.00 m PollinatorsBees Cultivation StatusWild Cultivation DetailsA tree of lowland tropical areas. The leaves of the manicheel are small, round and green but bisected by a yellow vein. Taxonomy and Nomenclature Kingdom: Plantae Taxonomic Rank: Species Synonym(s): Common Name(s): manchineel [English] Taxonomic Status: Current Standing: accepted Data Quality Indicators: Record Credibility Rating: verified - standards met Taxonomic Hierarchy KingdomPlantae – plantes, Planta, Vegetal, plants SubkingdomViridiplantae – green plants InfrakingdomStreptophyta – land plants SuperdivisionEmbryophyta DivisionTracheophyta – vascular plants, tracheophytes SubdivisionSpermatophytina – spermatophytes, seed plants, phanérogames ClassMagnoliopsida SuperorderRosanae OrderMalpighiales FamilyEuphorbiaceae – spurge, euphorbes GenusHippomane L. SpeciesHippomane mancinella L. – manchineel The leaves of the manicheel are small, round and green but bisected by a yellow vein.\n",
-      "\n",
-      "    Traits with possible options:\n",
-      "    - Leaf composition: ['3 palmate', '3-5 palmate', '3-5 pinnate', '3-5 pinnate, entire', '5-11 pinnate', '5-9 pinnate', 'bi-pinnate, 2 leaflets per jug', 'bi-pinnate, 20-40 leaflets per jug', 'bi-pinnate, 30-32 leaflets per jug', 'entire', 'pinnate, 4-6 leaflets', 'pinnate, 6-8 leaflets']\n",
-      "\n",
-      "    Can you select the correct value for the trait, fill in 'NOT SPECIFIED' if you cannot find anything.\n",
-      "    \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prompt)"
+    "    question = F\"\"\"\n",
+    "    Question: \n",
+    "    {question}\n",
+    "    \n",
+    "    Values: \n",
+    "    {options}\n",
+    "    \"\"\"\n",
+    "    ### PROMPT ###\n",
+    "\n",
+    "    # messages = [\n",
+    "    #     {\"role\": \"assistant\", \"content\": text},\n",
+    "    #     {\"role\": \"user\", \"content\": question}\n",
+    "    # ]\n",
+    "\n",
+    "    # # Generate a response\n",
+    "    # completion = openai.ChatCompletion.create(\n",
+    "    #     model = \"gpt-3.5-turbo\",\n",
+    "    #     messages = messages,\n",
+    "    # )\n",
+    "\n",
+    "    # file_name = combine_words_with_capital(trait)\n",
+    "    # with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
+    "    #     json.dump(completion, fp)"
    ]
   },
   {
