--- a/notebooks/reports/OpenAI/5.2.1_ChatGPT_prompting_per_species_per_trait.ipynb
+++ b/notebooks/reports/OpenAI/5.2.1_ChatGPT_prompting_per_species_per_trait.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_traits = \"../../../data/OpenAI/Traits/\"\n",
+    "\n",
+    "with open(F\"{folder_traits}Andrei.json\", 'r') as f:\n",
+    "  caribbean_traits_dict = json.load(f)\n",
+    "\n",
+    "with open(F\"{folder_traits}Andrei.json\", 'r') as f:\n",
+    "  caribbean_traits_dict = json.load(f)\n",
     "\n",
     "with open(F\"{folder_traits}Andrei.json\", 'r') as f:\n",
     "  caribbean_traits_dict = json.load(f)"
@@ -96,12 +102,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text Data"
+    "### Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_words_with_capital(string):\n",
+    "    # remove non-alphanumeric characters\n",
+    "    string = re.sub(r'[^\\w\\s]', '', string)  \n",
+    "    # combine words with capitalization\n",
+    "    string = ''.join(word.capitalize() for word in string.split())  \n",
+    "    return string"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Text Data\n",
+    "#### Caribbean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,221 +145,83 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Single Species Testing"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(caribbean_jsons_paras[22], 'r') as f:\n",
-    "  caribbean_species_para_test = json.load(f)\n",
-    "\n",
-    "with open(caribbean_jsons_sents[22], 'r') as f:\n",
-    "  caribbean_species_sent_test = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hippomane mancinella\n"
-     ]
-    }
-   ],
-   "source": [
-    "species = list(caribbean_species_sent_test.keys())[0]\n",
-    "print(species)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_sent = ' '.join(caribbean_species_sent_test[species])\n",
-    "text_paras = ' '.join(caribbean_species_para_test[species])\n",
-    "\n",
-    "text_paras == text_sent"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prompting per Trait"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_prompt(paragraph, traits, question):\n",
-    "\n",
-    "    prompt = F\"\"\"\n",
-    "    Text:\n",
-    "    {paragraph}\n",
-    "\n",
-    "    Trait with possible options:\n",
-    "    {traits}\n",
-    "\n",
-    "    {question}\n",
-    "    \"\"\"\n",
-    "\n",
-    "    return prompt\n",
-    "\n",
-    "def combine_words_with_capital(string):\n",
-    "    # remove non-alphanumeric characters\n",
-    "    string = re.sub(r'[^\\w\\s]', '', string)  \n",
-    "    # combine words with capitalization\n",
-    "    string = ''.join(word.capitalize() for word in string.split())  \n",
-    "    return string\n",
-    "\n",
-    "\n",
-    "def query_ChatGPT(prompt):\n",
-    "    messages = [\n",
-    "    {\"role\": \"user\", \"content\": prompt}\n",
-    "    ]\n",
-    "\n",
-    "    # Generate a response\n",
-    "    completion = openai.ChatCompletion.create(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
-    "        messages=messages,\n",
-    "    )\n",
-    "\n",
-    "    return completion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Life form': ['liana', 'tree'],\n",
-       " 'Leaf position': ['alternate',\n",
-       "  'alternate, opposite',\n",
-       "  'opposite',\n",
-       "  'opposite, whorls of 3',\n",
-       "  'opposite, whorls of 3, alternate'],\n",
-       " 'Leaf composition': ['3 palmate',\n",
-       "  '3-5 palmate',\n",
-       "  '3-5 pinnate',\n",
-       "  '3-5 pinnate, entire',\n",
-       "  '5-11 pinnate',\n",
-       "  '5-9 pinnate',\n",
-       "  'bi-pinnate, 2 leaflets per jug',\n",
-       "  'bi-pinnate, 20-40 leaflets per jug',\n",
-       "  'bi-pinnate, 30-32 leaflets per jug',\n",
-       "  'entire',\n",
-       "  'pinnate, 4-6 leaflets',\n",
-       "  'pinnate, 6-8 leaflets']}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "caribbean_traits_dict = {k: caribbean_traits_dict[k][0:] for k in list(caribbean_traits_dict)[:3]}\n",
-    "caribbean_traits_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:03<00:00,  1.29s/it]\n"
+      "                                                                            \r"
      ]
     }
    ],
    "source": [
+    "# Define the path to the directory where the prompts and results will be saved\n",
     "folder_prompts = \"../../../data/OpenAI/PromptsResults/\"\n",
-    "folder_species = species.replace(' ', '_')\n",
     "\n",
+    "# Loop over each JSON file in the list caribbean_jsons_paras\n",
+    "for json_file in caribbean_jsons_paras:\n",
     "\n",
-    "# For spss in species:\n",
-    "\n",
-    "try:\n",
-    "    os.makedirs(F\"{folder_prompts}{folder_species}\")\n",
-    "except FileExistsError:\n",
-    "    # directory already exists\n",
-    "    pass\n",
-    "\n",
-    "for trait, trait_options in tqdm(caribbean_traits_dict.items()):\n",
-    "\n",
-    "    ### PROMPT ###\n",
+    "    try:\n",
+    "        # Try to read in the JSON file\n",
+    "        with open(json_file, 'r') as f:\n",
+    "            caribbean_species_paragraph = json.load(f)\n",
+    "        \n",
+    "        # Get the name of the species from the keys of the dictionary in the JSON file\n",
+    "        species = list(caribbean_species_paragraph.keys())[0]\n",
+    "    except:\n",
+    "        # If the JSON file cannot be read in, get the name of the species from the file name\n",
+    "        species = json_file[62:-29].replace('_', ' ')\n",
+    "        continue\n",
     "    \n",
-    "    # Question\n",
-    "    question = F\"\"\"Can you select the correct value(s) for the '{trait}' trait from the text?\n",
-    "    Only return the correct value(s) or select 'Something else:' and fill in your finding(s).\"\"\"\n",
-    "    \n",
-    "    # List Options\n",
-    "    # options = \"\\n\".join([F\"\\t- {s}\" for s in trait_options])\n",
-    "    # options += \"\\n\\t- Nothing mentioned\\n\\t- Something else: \"\n",
-    "    options = trait_options + [\"Nothing mentiond in the next\", \"Someting else\"]\n",
+    "    # Join the paragraphs for the species into a single text string\n",
+    "    text = \" \".join(caribbean_species_paragraph[species])\n",
     "\n",
-    "    # Text\n",
-    "    text = text_paras\n",
+    "    # Replace spaces in the species name with underscores\n",
+    "    folder_species = species.replace(' ', '_')\n",
     "\n",
-    "    question = F\"\"\"\n",
-    "    Question: \n",
-    "    {question}\n",
-    "    \n",
-    "    Values: \n",
-    "    {options}\n",
-    "    \"\"\"\n",
-    "    ### PROMPT ###\n",
+    "    # Try to create a directory for the prompts for the species\n",
+    "    try:\n",
+    "        os.makedirs(F\"{folder_prompts}{folder_species}\")\n",
+    "    except FileExistsError:\n",
+    "        pass\n",
     "\n",
-    "    # messages = [\n",
-    "    #     {\"role\": \"assistant\", \"content\": text},\n",
-    "    #     {\"role\": \"user\", \"content\": question}\n",
-    "    # ]\n",
+    "    # Loop over each trait and trait options in the caribbean_traits_dict dictionary\n",
+    "    for trait, trait_options in (pbar := tqdm(caribbean_traits_dict.items(), leave=False, position=0)):\n",
+    "        pbar.set_description(f\"{species}\")\n",
     "\n",
-    "    # # Generate a response\n",
-    "    # completion = openai.ChatCompletion.create(\n",
-    "    #     model = \"gpt-3.5-turbo\",\n",
-    "    #     messages = messages,\n",
-    "    # )\n",
+    "        # Create the question and options for the ChatGPT prompt\n",
+    "        question = F\"Which of the following values correctly describe(s) the 'Leaf composition' trait mentioned in the text? Please select all that apply.\"\n",
+    "        options = trait_options + [\"None of the above\", \"Someting else (please specify)\"]\n",
+    "        user_content = F\"Question: {question}  \\n\\nValues: {options}\"\n",
     "\n",
-    "    # file_name = combine_words_with_capital(trait)\n",
-    "    # with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
-    "    #     json.dump(completion, fp)"
+    "        # Create the messages to send to the ChatGPT API\n",
+    "        messages = [\n",
+    "            {\"role\": \"assistant\", \"content\": text},\n",
+    "            {\"role\": \"user\", \"content\": user_content}\n",
+    "            ]\n",
+    "        # Call the ChatGPT API to generate a completion for the prompt\n",
+    "        # completion = openai.ChatCompletion.create(\n",
+    "        #     model = \"gpt-3.5-turbo\",\n",
+    "        #     messages = messages,\n",
+    "        # )\n",
+    "\n",
+    "        # # Combine the words in the trait name with capital letters and use this as the file name\n",
+    "        # file_name = combine_words_with_capital(trait)\n",
+    "        # # Save the completion to a JSON file with the file name in the species directory\n",
+    "        # with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
+    "        #     json.dump(completion, fp)\n",
+    "            \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
